# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import profilesRouter from "./profiles";
 import serviceReportsRouter from "./serviceReports";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(profilesRouter);
 router.use(serviceReportsRouter);
 
 export default router;
